--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
         </section>
 
         <a href="https://raw.githubusercontent.com/ibnc-r/Resources/refs/heads/main/MD%20TARIKUL%20ISLAM%20NAIM.vcf" 
-           download="MD TARIKUL ISLAM NAIM.vcf" 
+           download="MD%20TARIKUL%20ISLAM%20NAIM.vcf" 
            class="save-contact-btn" 
            data-aos="fade-up">
            <i class="fas fa-address-book"></i> Save Contact (VCF)
